substrate/frame/support/test/tests/construct_runtime_ui/undefined_call_part.stderr
error: `Pallet` does not have #[pallet::call] defined, perhaps you should remove `Call` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_call_part.rs:22:1
   |
22 |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
65 | / construct_runtime! {
66 | |     pub struct Runtime
67 | |     {
68 | |         System: frame_system::{Pallet, Call, Storage, Config<T>, Event<T>},
69 | |         Pallet: pallet::{Pallet, Call},
70 | |     }
71 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_call_check::is_call_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
